# MorseCode-Raspberrypi-PICO

./: CMakeCache.txt  CMakeLists.txt  LICENSE.md  README.md  cmake_install.cmake  main_i2c.c  ps2.c
App-CWKeyer/: CMakeLists.txt  Makefile  Parce.c  Parce_2.c  RAW_TEXT_1.txt  RAW_TEXT_2.txt  cmake_install.cmake  kbdpio.pio  main.c  main.h  main_i2c.c  main_i2c_Words_Sh.c  main_i2c_is55.c  main_i2c_patterns.c  main_pio_Words_Sh.c  main_pio_is55.c
App-CWKeyer/back/: main_CWPS2.c
App-CWShuffle/: CMakeLists.txt  CMakeLists_pio.txt  blink.c  main.h  main_i2c.c  main_i2c_Sh_Kbd.c  main_i2c_latch_Sh.c  main_i2c_patterns.c  main_i2c_patterns_sw6.c  main_i2c_pio.c  main_i2cpio.c
App-CWShuffle/back/: CMakeLists.txt  main.h  main_i2c_mo_pio.c  main_i2c_pio.c
App-CWTeach/: CMakeLists.txt  Makefile  cmake_install.cmake  main.h  main_i2c.c  main_i2c_a.c  main_i2c_b.c  main_pio.c
App-CWTeach/Extra/: shuffle_pico_2.c
App-CWTeach/back/: main_i2c.c
App-Keyer/: CMakeLists.txt  Makefile  VT100.txt  cmake_install.cmake  main.c  main.h  main_ShowRing.c  main_i2c.c  main_i2c_QRing.c  main_i2c_Ring_B.c  main_i2c_ShowRing.c  morse_pico.c
App-Keyer/App-Keyer/: Makefile
App-SWi2c/: CMakeLists.txt  Makefile  SW-Latch_i2c.c  SW-Timer_i2c-a.c  SW-Timer_i2c-b.c  SW-Timer_i2c-c.c  SW-Timer_i2c-d.c  SW-Timer_i2c-e.c  cmake_install.cmake  main.h  main_i2c.c
App-SWi2c/back/: SW-Latch_i2c-b.c  SW-Latch_i2c-c.c  SW-Latch_i2c-d.c  SW-Latch_i2c.c  SW-Timer_i2c-a.c  SW-Timer_i2c-c.c  SW-Timer_i2c-d.c  SW-Timer_i2c-e.c  SW_i2c_1.c  main.h  main_i2c.c
App-Shuffle/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.h  shuffle_pico.c
App-TxtCtl/: CMakeLists.txt  Makefile  cmake_install.cmake  main.h  mainps2_back.c  text_ctl_i2c_2.c  text_ctl_i2c_3.c
Common/: config_seven_seg.c  pcf8575i2c.c  ps2.c  ps2.h  seven_seg.c  seven_seg.h  seven_seg_back.c
Common-Feather/: seven_seg.c  seven_seg.h  seven_segback.c
Common/PCF8575-i2c/: pcf8575i2c.c  pcf8575i2c.h
Common/Seven_Seg/: seven_seg.c  seven_seg.h
Common/Seven_Seg_i2c/: seven_seg.c  seven_seg.h
Common/Seven_Seg_i2c/back/: seven_seg.c  seven_seg.h
Common/ps2/: PS_2 Controller.html  kbdpio.pio.h  ps2.c  ps2kboard.ods
Common/ps2/PS_2 Controller_files/: style.css
